refactor(cancel penalties): reverted days before to hours

--- a/src/i18n/messages.travelgatex.en.xlf
+++ b/src/i18n/messages.travelgatex.en.xlf
@@ -820,6 +820,10 @@
         <source>Quote</source>
         <target>Quote</target>
       </trans-unit>
+      <trans-unit id="payment-type" datatype="html">
+        <source>Payment type</source>
+        <target>Payment type</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
