--- a/src/i18n/messages.travelgatex.es.xlf
+++ b/src/i18n/messages.travelgatex.es.xlf
@@ -859,6 +859,10 @@
         <source>{booking.hotel.rooms.length, plural, =0 {rooms} =1 {room} other {rooms}}</source>
         <target>{booking.hotel.rooms.length, plural, =0 {Habitaciones} =1 {Habitación} other {Habitaciones}}</target>
       </trans-unit>
+      <trans-unit id="binding" datatype="html">
+        <source>Binding</source>
+        <target>Vinculante</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
