fix(search-bookings): Solved an error with the client type on the query

--- a/src/i18n/messages.travelgatex.es.xlf
+++ b/src/i18n/messages.travelgatex.es.xlf
@@ -881,11 +881,11 @@
         </trans-unit>
       <trans-unit id="show-request" datatype="html">
         <source>Show RQ</source>
-        <target>Mostrar petición</target>
+        <target>Mostrar RQ</target>
       </trans-unit>
       <trans-unit id="show-response" datatype="html">
         <source>Show RQ</source>
-        <target>Mostrar respuesta</target>
+        <target>Mostrar RQ</target>
       </trans-unit>
       <trans-unit id="copy-to-clipboard" datatype="html">
         <source>Copy to clipboard</source>
