--- a/src/i18n/messages.travelgatex.en.xlf
+++ b/src/i18n/messages.travelgatex.en.xlf
@@ -908,6 +908,10 @@
         <source>Expire date</source>
         <target>Expire date</target>
       </trans-unit>
+      <trans-unit id="room-info-tooltip" datatype="html">
+        <source>Click to see more room info</source>
+        <target>Click to see more room info</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
