--- a/src/i18n/messages.travelgatex.es.xlf
+++ b/src/i18n/messages.travelgatex.es.xlf
@@ -907,6 +907,10 @@
         <source>Expire date</source>
         <target>Fecha de caducidad</target>
       </trans-unit>
+      <trans-unit id="room-info-tooltip" datatype="html">
+        <source>Click to see more room info</source>
+        <target>Haz clic para ver más información de la habitación</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
